# nexus-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.dockerignore  Dockerfile.robomp  Dockerfile.robomp.dockerignore  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  THIRD-PARTY-NOTICES.md  docker-compose.yml  mcp.json.example  package.json  rust-toolchain.toml  start.bat  start.ps1
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: build-workany.yml  ci.yml  docker-publish.yml  release.yml
.nexus/commands/: fix-issues.md  learn.md  mcp-health.md  review-prs.md  rewind.md
.nexus/skills/memory-routing/: SKILL.md
.nexus/skills/tool-priority/: SKILL.md
.nexus/skills/tool-prompt-optimization/: SKILL.md
assets/: banner.html
crates/nexus-checkpoint/: Cargo.toml  build.rs
crates/nexus-checkpoint/src/: checkpoint.rs  checkpoint_store.rs  file_state.rs  lib.rs  napi.rs  swap_policy.rs
crates/nexus-sandbox/: Cargo.toml
crates/nexus-sandbox/src/: deny.rs  landlock.rs  lib.rs  profile.rs  seatbelt.rs  seccomp.rs  violation.rs  workspace.rs
crates/nexus-sandbox/tests/: sandbox_rejects_rm_rf.rs
crates/pi-ast/src/: lib.rs  repomap.rs
crates/pi-natives/: Cargo.toml
crates/pi-natives/src/: bash_ast.rs  crash_handler.rs  lib.rs  power.rs  repomap.rs
crates/pi-shell/src/: shell.rs
docs/: ERRATA-GPT5-HARMONY.md  NEXUS-AGENT-GUIDE.md  WEBSITE.md  advisor-watchdog.md  approval-mode.md  auth-broker-gateway.md  collab.md  compaction.md  config-usage.md  context-files.md  custom-tools.md  environment-variables.md  extension-loading.md  gemini-manifest-extensions.md  hooks.md  install-id.md  integration-guide.md  keybindings.md  lsp-config.md  macos-signing-notarization.md  magic-keywords.md  marketplace.md  mcp-config.md  mcp-server-tool-authoring.md  migration-guide.md  mnemosyne-memory-backend.md  models.md  natives-addon-loader-runtime.md  natives-architecture.md  natives-build-release-debugging.md  plugin-manager-installer-plumbing.md  porting-from-pi-mono.md  porting-to-natives.md  providers.md  python-repl.md  rpc.md  rulebook-matching-pipeline.md  sdk.md  secrets.md  session-operations-export-share-fork-resume.md  (+11 more)
docs/skills/: authoring-extensions.md  authoring-hooks.md  authoring-marketplaces.md
docs/skills/examples/hello-extension/: README.md  package.json
docs/skills/examples/mini-marketplace/: README.md
docs/skills/examples/mini-marketplace/.claude-plugin/: marketplace.json
docs/skills/examples/mini-marketplace/my-plugin/: package.json
docs/skills/examples/safety-hook/: README.md  package.json
docs/toolconv/: gemini.md  gemma.md  pi-native.md
docs/tools/: debug.md  github.md  grep.md  hub.md  learn.md  manage_skill.md  read.md  retain.md  rewind.md  task.md
python/omp-rpc/: pyproject.toml
python/robomp/: entrypoint.sh
python/robomp/web/: package.json
scripts/: ci-update-brew-formula.ts  coverage.ts  install.ps1  install.sh  link-nexus.sh  link-nexus.test.ts  release.ts  rewrite-system-prompt.ts  run-all-tests.ts  security-audit.ts  start-services.ps1
scripts/install-tests/: binary.dockerfile  run-podman.sh  source.dockerfile  tarball.dockerfile
vscode-extension/nexus-vscode/: README.md  package.json
vscode-extension/nexus-vscode/src/: extension.js  extension.test.js  presentation.js  presentation.test.js  state.test.js
vscode-extension/nexus-vscode/src/chat/: chatProvider.js  chatRenderer.js  diffController.js  grpcTransport.js  permissionResponse.js  permissionResponse.test.js  processManager.js  protocol.js  sessionManager.js
vscode-extension/nexus-vscode/themes/: Nexus-Terminal-Black.json
workany-dev/workany-dev/: CONTRIBUTING.md  index.html  package.json  pnpm-lock.yaml
workany-dev/workany-dev/.github/workflows/: build-nexus.yml  build.yml  update-cask.yml
workany-dev/workany-dev/scripts/: build-nexus.sh  build.sh  check-api-binary.js  check-rust.js  update-cask.sh  version.sh
workany-dev/workany-dev/src-api/: .prettierrc.json  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
workany-dev/workany-dev/src-api/scripts/: patch-deps.mjs  patch-mcp-sdk.mjs
workany-dev/workany-dev/src-api/src/: index.ts
workany-dev/workany-dev/src-api/src/config/: constants.ts  (+2 more)
workany-dev/workany-dev/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
workany-dev/workany-dev/src-tauri/capabilities/: default.json
workany-dev/workany-dev/src/components/: setup-guard.tsx
(+74 files in other folders)
