# SPDX-License-Identifier: Apache-2.0
# 原始版权属于 xAI / Grok Build 项目（Apache-2.0）。Nexus Agent 项目在此基础
# 上进行了改编与重写，以替换 Grok 内部依赖（xai-grok-config / xai-grok-paths /
# xai-hunk-tracker / xai-file-utils）为 Nexus 本地实现 + 直接使用 pi-iso。
[package]
name = "nexus-checkpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Filesystem-level checkpoint/rewind system for Nexus Agent, ported from Grok Build"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = ["durable"]
## 启用磁盘持久化镜像（checkpoint 写入 <cwd>/.nexus/rewind-checkpoints/）。
## 关闭后走纯内存路径（与 Grok 的 workspace_rewind_durable=off 等价）。
durable = []

[dependencies]
anyhow.workspace = true
# 注意：tracing / chrono / sha2 / tempfile 在 omp workspace.dependencies 中未声明，
# 故此处使用内联版本，避免污染根 Cargo.toml。
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
sha2 = "0.10"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true

# NAPI 绑定（暴露 CheckpointStore.create/restore/list/diff 给 TS 侧）
napi.workspace = true
napi-derive.workspace = true

# ISO FS 集成：checkpoint 优先走 reflink（btrfs/apfs），fallback 到 hash copy。
pi-iso.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[build-dependencies]
napi-build.workspace = true
